# color-follower-ros2-v2

./: README.md  run.sh
.github/workflows/: build.yml
src/mobile_world/: package.xml
src/mobile_world/worlds/: world_v1.sdf
src/red_cube_follower/: CMakeLists.txt  package.xml
src/red_cube_follower/src/: red_cube_follower_node.cpp
src/red_cube_generator/: CMakeLists.txt  package.xml
src/red_cube_generator/launch/: spawn_red_cube.launch.py
src/red_cube_generator/worlds/: red_cube.sdf
src/world_generator/: CMakeLists.txt  package.xml
src/world_generator/launch/: spawn_red_cube.launch.py
